@@ -36,6 +36,7 @@ flag for use with table reflection to help with quoting rules
 - unit tests updated to run without any pysqlite installed; pool
 test uses a mock DBAPI
 - urls support escaped characters in passwords [ticket:281]
+- added limit/offset to UNION queries
 
 0.2.7
 - quoting facilities set up so that database-specific quoting can be
